--- a/references.bib
+++ b/references.bib
@@ -2546,3 +2546,11 @@
   year={1999},
   publisher={Australian National University}
 }
+
+@book{cleveland1993,
+  title={Visualizing data},
+  author={Cleveland, William S},
+  year={1993},
+  publisher={Hobart press}
+}
+
