--- a/problems.Rmd
+++ b/problems.Rmd
@@ -219,7 +219,7 @@ ggplot(df, aes(party, votes, fill = party)) +
 
 ```
 
-Each bar represents a unique set of voters and thus the subsets of the data represented by the bars are disjoint. Technically, there is no hard and fast rule about having each geometric object represent a disjoint part of the data. For example, we could transform the first bar by taking a union of the votes of National and Labour parties, and represent the same underlying data the following way:
+Each bar represents a unique set of voters and thus the subsets of the data represented by the bars are disjoint. Technically, there is no hard and fast rule about this. For example, we could transform the first bar by taking a union of the votes of National and Labour parties, and represent the same underlying data the following way:
 
 ```{r union-geoms}
 #| echo: false
@@ -252,7 +252,7 @@ ggplot(df2, aes(party, votes, fill = party)) +
 
 ```
 
-This way of representing the data has several problems, however. First, there is the issue of its suitability towards the main goal of the visualization. Specifically, when visualizing election data such as this one, we are typically interested in judging the relative number of votes each party received. The second barplot makes this comparison difficult. Specifically, in the second barplot, since the National bar represents a subset of the National OR Labour bar, we have to perform additional mental calculation if we want to find out how many votes Labour received and compare the absolute counts directly [@cleveland1985]. Second, we have metadata knowledge [see e.g. @wilkinson2012; @velleman1993] about the data being disjoint - we know that, in the New Zealand parliament electoral system, each voter can only cast one vote for a single party. Finally, there is the issue of duplicating information: in the second barplot, the number of votes the National party received is counted twice, once in the leftmost bar and again in the second-left bar. This goes against the general principle of representing our data in the most parsimonious way [@tufte2001].
+However, this way of representing the data has several problems. First, there is the issue of its suitability towards the main goal of the visualization. Specifically, when visualizing election data such as this one, we are typically interested in judging the relative number of votes each party received. The second barplot makes this comparison difficult. Specifically, in the second barplot, since the National bar represents a subset of the National OR Labour bar, we have to perform additional mental calculation if we want to find out how many votes Labour received and compare the absolute counts directly [@cleveland1985]. Second, we have metadata knowledge [see e.g. @wilkinson2012; @velleman1993] about the data being disjoint - we know that, in the New Zealand parliament electoral system, each voter can only cast one vote for a single party. Finally, there is the issue of duplicating information: in the second barplot, the number of votes the National party received is counted twice, once in the leftmost bar and again in the second-left bar. This goes against the general principle of representing our data in the most parsimonious way [@tufte2001].
 
 Even when our goal is not to compare absolute counts, there are usually better disjoint data visualization techniques available. For example, if we were interested in visualizing the proportion of votes that each party received, we could draw the following plot: 
 
@@ -340,36 +340,34 @@ SQL aggregation queries (`GROUP BY`) are based on partitions [@hellerstein1999].
 
 #### Plots as partitions
 
-In the two preceding sections, I have argued that our interactive data visualization system should fulfill two fundamental properties:
+In the two preceding sections, I have argued that our interactive data visualization system should have fulfill have two fundamental properties:
 
 - Plots should show the full data (surjective mapping)
-- Geometric objects should represent distinct subsets of the data (disjoint parts)
+- Geometric objects within these plots should represent distinct subsets (disjoint parts)
 
-These two properties suggest a fundamental model for plots - that of a [partition](#Partitions). 
+These two properties suggest a fundamental model for plots: that of a [partitions](#Partitions). 
 
 While I have not been able to find explicit references linking geometric objects to partitions, some authors have used the language of partitions. For example, Wilkinson [-@wilkinson2012, pp 210] and @keim2002 have linked stacked plots to (hierarchical) partitions.
 
 #### Partitions and products
 
-In a typical interactive plot, the data will be partitioned across multiple dimensions. Moreover, often, this multi-way partitioning will not form a single flat partition, but instead a hierarchy of partitions.
-
-To give a concrete example, suppose we want to draw the following barplot:
+In a typical interactive plot, the data will be partitioned across multiple dimensions. To give a concrete example, suppose we want to draw the following barplot:
 
 ```{r}
 #| echo: false
 #| message: false
 #| fig-height: 3
 
-df <- data.frame(group = factor(c("A", "B", "B", "A", "C", "A", "C", "C")), 
-                 selection = factor(c(1, 1, 2, 2, 2, 1, 1, 2)), 
-                 value = c(12, 15, 21, 10, 17, 21, 13, 11))
+df <- data.frame(group = factor(c("A", "A", "A", "B", "B", "C", "C", "C")), 
+                 selection = factor(c(1, 1, 2, 1, 2, 1, 2, 2)), 
+                 value = c(12, 21, 10, 9, 15, 15, 12, 13))
 df2 <- aggregate(value ~ group + selection, data = df, sum)
 
 ggplot(df2, aes(group, y = value, fill = selection)) +
-  geom_col(position = position_stack(reverse = TRUE)) +
+  geom_col(position = position_stack(), col = "white") +
   scale_fill_manual(values = pal_dark_3) +
   guides(fill = "none", count = "none") +
-  labs(y = "Sum") +
+  labs(x = NULL, y = "Sum") +
   clean_theme +
   theme(plot.margin = unit(c(0, 4, 0, 4), units = "cm"))
 ```
@@ -405,7 +403,7 @@ To draw the individual bar segments, we need to sum the `value` variable across 
 
 ```{r}
 #| results: "asis"
-# Using paste() here to simulate a product of two factors
+# Using paste0() here to simulate a product of two factors
 product_factor <- paste0(df$group, df$selection)
 split_dfs <- split(df, product_factor)
 render_tables(split_dfs)
@@ -440,15 +438,96 @@ render_tables(stacked_dfs)
 Now, we can combine the tables into one data set and render:
 
 ```{r}
-combined_df <- do.call(rbind, stacked_dfs)
-combined_df$selection <- factor(combined_df$selection, levels = c(1, 2))
-
-ggplot(combined_df[6:1, ], aes(x = group, y = value, fill = selection)) +
-  geom_col(position = position_identity())
-
+#| echo: false
+custom_theme <- list(
+  scale_fill_manual(values = pal_dark_3),
+  guides(fill = "none", count = "none"),
+  labs(x = NULL, y = "Sum"),
+  theme(plot.margin = unit(c(0, 4, 0, 4), units = "cm"))
+)
 ```
 
-Now, we have shown how we can compute summary statistics for a stacked barplot using a split-apply-combine pipeline [@wickham2011]. For certain types of plots, a simple strategy like this might work fine. However, the reason why the example above is simple is because we have ignored or side-stepped certain issues. For example, how do we know if we are stacking the summaries in the right order? What if we need to transform the bar segments in some way, such as divide by the height of the parent bar? Once we start dealing with plots like spineplots or spinograms, it becomes clear that a simple "flat" partition structure is not enough.    
+```{r}
+#| fig-height: 3
+combined_df <- do.call(rbind, stacked_dfs)
+combined_df$selection <- factor(combined_df$selection, levels = c(2, 1))
+# Need to reverse data order for ggplot2 to layer segments appropriately
+combined_df <- combined_df[6:1, ] 
+
+ggplot(combined_df, aes(x = group, y = value, fill = selection)) +
+  geom_col(position = position_identity(), col = "white") +
+  custom_theme
+```
+
+Now, we have shown how we can compute summary statistics for a stacked barplot using a simple split-apply-combine pipeline [@wickham2011]. This is in fact what happens implicitly in most `ggplot2` plots:
+
+```{r}
+#| eval: false
+ggplot(data, aes(x, y, fill = fill)) +
+  geom_bar()
+```
+
+In the call above, we partition the data set by the Cartesian product of the `x`, `y`, and `fill` variables. That is, we break the data into parts based on the unique combinations of these variables, and then compute whatever statistical transformation we need. See the following comment from the [`ggplot2` documentation](https://github.com/tidyverse/ggplot2/blob/f46805349d6ca8ca7a99f8966cfa0f29279c2f6c/R/grouping.R#L7) [@wickham2016]:
+
+```{r}
+# If the `group` variable is not present, then a new group
+# variable is generated from the interaction of all discrete (factor or
+# character) vectors, excluding `label`.
+```
+
+#### Limits of simple product partitions
+
+For many types of plots, the strategy of taking products to form a single "flat" partition of the data works reasonably well. However, for other types of plots, this simple model breaks. For example, returning back to the example of the barplot from the section above, we may want to represent the same underlying data in a different way:
+
+```{r barplot-spineplot}
+#| echo: false
+#| message: false
+#| fig-height: 3
+#| fig-cap: "The same underlying data that can be represented by a barplot (left) can be represented by a spineplot (right)."
+
+library(ggplot2)
+library(patchwork)
+library(dplyr)
+
+df_spine1 <- df |>
+  group_by(group) |>
+  summarize(sum = sum(value)) |>
+  ungroup() |>
+  mutate(left = cumsum(lag(sum, default = 0)), right = cumsum(sum), 
+         position = (left + right) / 2)
+
+df_spine2 <- df |>
+  group_by(group, selection) |>
+  summarize(sum_prod = sum(value)) |>
+  left_join(df_spine1, by = "group") |>
+  mutate(prop = sum_prod / sum) |>
+  group_by(group) |>
+  mutate(prop_cum = cumsum(prop))
+
+# Need to reorder the rows to make ggplot2 layer the bars in the right order
+df_spine2 <- df_spine2[c(2 * 0:2 + 2, 2 * 0:2 + 1), ]
+
+p1 <- ggplot(combined_df, aes(x = group, y = value, fill = selection)) +
+  geom_col(position = position_identity(), col = "white") +
+  custom_theme +
+  theme(plot.margin = unit(c(0, 0.5, 0, 0.5), units = "cm"))
+
+p2 <- ggplot(df_spine2, aes(position, prop_cum, width = sum, fill = selection)) +
+  geom_bar(stat = "identity", position = "identity", col = "white") +
+  geom_text(data = df_spine1, aes(x = position, y = 0.9, label = group, fill = NULL),
+            col = "white") +
+  scale_x_continuous(breaks = c(0, df_spine2$right)) +
+  custom_theme +
+  scale_fill_manual(values = pal_dark_3[2:1]) +
+  labs(x = "Count", y = "Proportion") +
+  theme(plot.margin = unit(c(0, 0.5, 0, 0.5), units = "cm"))
+
+p1 + p2
+```
+
+
+
+The reason for this is because we have ignored or side-stepped certain issues. For example, how do we know if we are stacking the summaries in the right order? What if we need to transform the bar segments in some way, such as divide by the height of the parent bar, to show proportions rather than absolute counts? Once we start dealing with plots like spineplots or spinograms, it becomes clear that the flat partition structure is not enough.    
 
 #### Partitions and hierarchy
 
@@ -467,3 +546,6 @@ Suppose we are summarizing a part consisting of $n$ data points.
 ## Scaling
 
 Information needs to be encoded in visual attributes [@cleveland1985]
+
+Transformation is a critical tool for visualization or for any other mode of data analysis
+because it can substantially simplify the structure of a set of data [@cleveland1993, pp. 48]
